force-app/main/default/objects/Target_Metrics__c/Target_Metrics__c.object-meta.xml
<CustomObject>
    <label>Target Metrics</label>
    <nameField>
        <label>Target  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets Metrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>