force-app/main/default/objects/Target_Metrics__c/fields/Aggregate_Function__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Function__c</fullName>
    <label>Aggregate Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Unique Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>