force-app/main/default/objects/Target_Metrics__c/fields/Field_To_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Aggregate__c</fullName>
    <label>Field To Aggregate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>