force-app/main/default/objects/Target_Metrics__c/fields/Field_To_Group__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Group__c</fullName>
    <label>Field To Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>