force-app/main/default/objects/Target_Metrics__c/fields/Field_Value_to_Filter__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_to_Filter__c</fullName>
    <label>Field Value to Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>