force-app/main/default/objects/Target_Metrics__c/fields/Profile_Names__c.field-meta.xml
<CustomField>
    <fullName>Profile_Names__c</fullName>
    <label>Profile Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>