force-app/main/default/objects/Target_Metrics__c/fields/Profiles_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Profiles_Applicable__c</fullName>
    <label>Profiles Applicable</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Sales Executive</fullName>
            </value>
            <value>
                <fullName>Tele Caller</fullName>
            </value>
            <value>
                <fullName>CRM User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>