force-app/main/default/objects/Target_Metrics__c/fields/Roles_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Roles_Applicable__c</fullName>
    <label>Roles Applicable</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>ABM</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>